Added User, SchoolClass and Grade classes
User has replaced Teacher and Student, and made them one class for efficiency.
SchoolClass is a class that stores all the School Classes that a teacher can make and put students into.
Grade stores an array of integers and can return that array or the average.

--- a/LearningPlatform/LearningPlatform/LearningPlatform.csproj
+++ b/LearningPlatform/LearningPlatform/LearningPlatform.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
+    <Compile Include="Grade.cs" />
     <Compile Include="MainPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,9 +68,11 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <Compile Include="SchoolClass.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Teacher.cs" />
     <Compile Include="theme.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
     </EmbeddedResource>
